# FastAPI-Estudo

./: .coverage  .env  .gitignore  README.md  database.db  pyproject.toml
aula1/: app.py
fast_zero/: __init__.py  app.py  database.py  models.py  security.py  settings.py
fast_zero/routes/: auth.py  users.py
migrations/: README  README.md  env.py
migrations/versions/: 332a5507d3e5_create_users_table.py  d06549aa5d60_banco.py  d111b616b59f_automatic_models.py  d6eb87422b2d_automatic_models.py
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_users.py
